# s2rc

./: CMakeLists.txt  README.md  tusb_config.h  uart_debug.txt  verbose_explanation.md
.github/workflows/: build-release.yml  build.yml  release.yml
cmake/: pico_sdk_import.cmake
controller_bridge/: .gitignore  CMakeLists.txt
controller_bridge/config/: default_config.ini
controller_bridge/include/: controller_bridge.h
controller_bridge/src/: config.c  controller_state.c  input_handler.c  main.c  serial_port.c
controller_bridge/src/platform/: linux_input.c  macos_input.c  posix_serial.c  windows_input.c  windows_serial.c
include/: config.h  controller_state.h  input_hid_generic.h  switch_report.h
src/: hid_callbacks.c  main.c  switch_device.c  switch_device.h  uart_sender_example.c  usb_descriptors.c
src/driver/: hid_callbacks.c  switch_driver.c  switch_driver.h
src/input/: input_hid_generic.c  input_manager.c  input_manager.h  switch_buttons.h
src/mapping/: mapper.c  mapper.h
src/output/: output_switch.c  output_switch.h  switch_hid_descriptor.h  switch_hid_report.h
src/usb_host/: usb_host_drivers.c  usb_host_drivers.h  usb_host_init.c
uart-bridge/: .gitignore  BUTTON_MAPPING_FIX.md  CMakeLists.txt  FINDINGS_AND_SOLUTION.md  KEYBOARD_QUICKSTART.md  PC_KEYBOARD_GUIDE.md  README.md  TESTING_GUIDE.md  UART_SWITCH_CONTROLLER_PROJECT.md  diagnose_buttons.py  diagnose_buttons_v2.py  keyboard_to_serial.py  keyboard_to_serial_corrected.py  requirement.txt  test_buttons.py  test_buttons_corrected.py  test_buttons_with_header.py  test_dpad.py  test_dpad_simple.py  test_uart_raw.py  uart_monitor.py
uart-bridge/src/: main.c  main_pc_keyboard.c  tusb_config_device.h
